  there are corresponding changes to the CSS; the name clashes with the id of
	the address form element
- added list of selectable addresses for change shipping/biling address
- fix in ZMSession where the country was stored in the session rather than the
  countryId
- renamed ZMPageView::getTemplate() and ZMThemeInfo::getTemplateFor(..) to
  getLayout() and getLayoutFor(..), respectively

Release 0.8.0.1
- add active plugins to loader path; that means effectively, plugins may
  override any *default* class or controller
- fixed title for homepage, category, category_list, manufacturer and ezpages
  (ZMMetaTags)
- made view accessible from controller
- fixed a few leftover hardcoded response views from controllers
- added mapping id to ZMView
- moved ZMAjaxController::callZCPageController(..) as zm_call_zc_page into the
  misc package
- moved ZMPageView a bit, removed obsolete ZMThemeView
- added ZMPluginView to allow controller added by a plugin to serve custom
  content views from within the plugin folder
- added setting to enable/disable adding the store name to the page title
- fixed broken create account (email template was missin $zm_account)
- fixed source_view view
- added example of using ZenMagick from external PHP files

Release 0.8.0
- added cookie_usage view
- added code to allow ZenMagick to actually process POST requests
- added ZMLoginController for POST handling of logins
- added new setting 'postRequestEnabledList' to allow POST request handling
  for configured pages only
- added new method isValidSession() to ZMRequest
- add password and authorization to ZMAccount and actually populate them
- added new global $zm_validator instance for central validation config (this
  will be used for server side validation, too)
- added new all-in-one ZMValidator::insertJSValidation($id) method
- added extra/valdation.php to default theme which now contains all
  validations
- modified all views that use JS validation to use the new validation code